--- a/src/components/swapbutton.astro
+++ b/src/components/swapbutton.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<label class="swap swap-rotate sm:px-10">
+<label class="swap swap-rotate px-4">
     <!-- this hidden checkbox controls the state -->
     <input type="checkbox" onclick="changeTheme()"/>
     <!-- sun icon -->
