--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -18,9 +18,10 @@ const t = useTranslations(lang);
 ---
 
 <BaseLayout title="</rdvid>">
-  <article class="flex flex-col h-screen lg:h-full lg:justify-center">
-    <section class="hero">
-      <div class="hero-content flex-col-reverse justify-center max-lg:py-8 lg:flex-row lg:align-center">
+  <article class="flex flex-col h-screen lg:h-full lg:justify-around">
+    
+    <section>
+      <div class="flex flex-col-reverse w-full justify-center lg:flex-row lg:align-center">
         <div class="flex flex-col justify-center w-6/12 max-lg:w-full text-center max-lg:p-4r">
           <p id="placeholder" class="hidden">{t('home.title')}</p>
           <h1 id="home-title" class="text-4xl font-bold text-center max-lg:text-3xl">‎ </h1>
@@ -48,11 +49,12 @@ const t = useTranslations(lang);
               href=`${Astro.url.origin}/${lang}/about`>About me</a>
         </div>
         <Image loading='lazy' src="https://f005.backblazeb2.com/file/debbuggers/picofme (1).png"
-              height={300} width={300} 
-              class="w-3/12 max-lg:w-8/12 rounded-xl shadow-2xl border-2 border-black shadow-gray-600" 
-              aria-label="Rafael picture" alt="my profile picture" />
+                height={300} width={300} 
+                class="w-9/12 lg:w-3/12 self-center my-8 rounded-xl shadow-2xl border-3 border-black shadow-gray-600" 
+                aria-label="Rafael picture" alt="my profile picture" />
       </div>
     </section>
+    
   </article>
 </BaseLayout>
 
@@ -72,3 +74,8 @@ const t = useTranslations(lang);
   typeWriter();
 
 </script>
+
+<style>
+  
+</style>
+
