--- a/src/components/modal/discord-card.astro
+++ b/src/components/modal/discord-card.astro
@@ -1,11 +1,10 @@
 ---
 import { Icon } from "astro-icon/components"
 import { Image } from "astro:assets"
-////https://i.stack.imgur.com/dbj7j.jpg?s=256&g=1
 ---
 
 <label for="discord-modal">
-  <li class="tooltip tooltip-right" data-tip="My Discord">  
+  <li class="tooltip tooltip-right" data-tip="Discord">  
     <a class="p-4 hover:scale-125">
       <Icon name={'fa-brands:discord'} size={24}/>
     </a>    
