--- a/src/components/modal/spotify-card.astro
+++ b/src/components/modal/spotify-card.astro
@@ -4,7 +4,7 @@ import Playlist from "../playlist.astro";
 ---
 
 <label for="spotify-modal">
-  <li class="tooltip tooltip-right" data-tip="My Top 5 Spotify list">  
+  <li class="tooltip tooltip-right" data-tip="Top 5 Spotify">  
     <a class="p-4 hover:scale-125">
       <Icon name={'fa-brands:spotify'} size={24}/>
     </a>    
