--- a/src/components/modal/github-card.astro
+++ b/src/components/modal/github-card.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets"
 ---
 
 <label for="github-modal">
-  <li class="tooltip tooltip-right" data-tip="My Github">  
+  <li class="tooltip tooltip-right" data-tip="Github">  
     <a class="p-4 hover:scale-125">
       <Icon name={'fa-brands:github'} size={24}/>
     </a>    
