--- a/src/components/modal/linkedin-card.astro
+++ b/src/components/modal/linkedin-card.astro
@@ -2,8 +2,9 @@
 import { Icon } from "astro-icon/components"
 import { Image } from "astro:assets"
 ---
+
 <label for="linkedin-modal">
-  <li class="tooltip tooltip-right" data-tip="My Linkedin">  
+  <li class="tooltip tooltip-right" data-tip="Linkedin">  
     <a class="p-4 hover:scale-125">
         <Icon name={'fa-brands:linkedin'} size={24}/>
       </a>    
